--- a/app/src/main/res/layout/activity_customize_note.xml
+++ b/app/src/main/res/layout/activity_customize_note.xml
@@ -16,6 +16,7 @@
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ToolbarBackArrow"
         app:titleTextColor="@color/white" />
 
     <ScrollView
@@ -56,8 +57,6 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/bu1"
-                android:layout_marginRight="@dimen/bu1"
                 android:layout_marginTop="@dimen/bu3"
                 android:background="@color/greyCC" />
 
@@ -71,10 +70,10 @@
                 <TextView
                     android:layout_width="@dimen/bu6"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/bu1"
+                    android:layout_marginLeft="@dimen/bu1_5"
                     android:text="@string/customize_note_activity_text_sign"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/text_size_36px" />
+                    android:textSize="@dimen/text_size_34px" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/list_signs"
@@ -86,8 +85,6 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/bu1"
-                android:layout_marginRight="@dimen/bu1"
                 android:layout_marginTop="@dimen/bu0_5"
                 android:background="@color/greyCC" />
 
@@ -101,10 +98,10 @@
                 <TextView
                     android:layout_width="@dimen/bu6"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/bu1"
+                    android:layout_marginLeft="@dimen/bu1_5"
                     android:text="@string/customize_note_activity_text_style"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/text_size_36px" />
+                    android:textSize="@dimen/text_size_34px" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/list_styles"
@@ -116,8 +113,6 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/bu1"
-                android:layout_marginRight="@dimen/bu1"
                 android:layout_marginTop="@dimen/bu0_5"
                 android:background="@color/greyCC" />
 
@@ -125,17 +120,17 @@
                 android:id="@+id/view_text_color"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/bu5"
-                android:background="@drawable/selector_settings_item"
+                android:background="?android:attr/selectableItemBackground"
                 android:clickable="true">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/bu1"
+                    android:layout_marginLeft="@dimen/bu1_5"
                     android:text="@string/customize_note_activity_text_text_color"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/text_size_36px" />
+                    android:textSize="@dimen/text_size_34px" />
 
                 <View
                     android:id="@+id/view_text_color_color"
@@ -149,8 +144,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="@dimen/bu1"
-                    android:layout_marginRight="@dimen/bu1"
                     android:background="@color/greyCC" />
             </RelativeLayout>
 
@@ -159,7 +152,7 @@
                 android:id="@+id/view_background_color"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/bu5"
-                android:background="@drawable/selector_settings_item"
+                android:background="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:gravity="center_vertical">
 
@@ -167,10 +160,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/bu1"
+                    android:layout_marginLeft="@dimen/bu1_5"
                     android:text="@string/customize_note_activity_text_background_color"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/text_size_36px" />
+                    android:textSize="@dimen/text_size_34px" />
 
                 <View
                     android:id="@+id/view_background_color_color"
@@ -184,8 +177,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="@dimen/bu1"
-                    android:layout_marginRight="@dimen/bu1"
                     android:background="@color/greyCC" />
             </RelativeLayout>
 
