--- a/app/src/main/res/menu/menu_song_options.xml
+++ b/app/src/main/res/menu/menu_song_options.xml
@@ -1,13 +1,8 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_edit_song"
-        android:icon="@drawable/icon_edit"
-        android:title="@string/song_activity_menu_edit"
-        app:actionLayout="@layout/list_item_menu" />
+        android:title="@string/song_activity_menu_edit" />
     <item
         android:id="@+id/action_delete_song"
-        android:icon="@drawable/icon_delete"
-        android:title="@string/song_activity_menu_delete"
-        app:actionLayout="@layout/list_item_menu" />
+        android:title="@string/song_activity_menu_delete" />
 </menu>
